--- a/index.html
+++ b/index.html
@@ -56,84 +56,6 @@
             <use href="./images/icons.svg#icon-burger"></use>
           </svg>
         </button>
-        <div class="modile-menu">
-          <div class="container modile-menu-container">
-            <button class="mobile-menu-close">
-              <svg class="mobile-menu-icon" width="8" height="8">
-                <use href="./images/icons.svg#icon-close"></use>
-              </svg>
-            </button>
-            <nav class="mobile-menu-nav">
-              <ul class="mobile-nav-list">
-                <li class="mobile-nav-item">
-                  <a class="mobile-nav-link current" href="./index.html"
-                    >Studio</a
-                  >
-                </li>
-                <li><a class="mobile-nav-link" href="#">Portfolio</a></li>
-                <li><a class="mobile-nav-link" href="#">Contacts</a></li>
-              </ul>
-            </nav>
-            <address class="mobile-contacts">
-              <ul class="mobile-contacts-list">
-                <li class="mobile-contacts-link">
-                  <a href="tel:+110001111111">+11 (000) 111-11-11</a>
-                </li>
-                <li class="mobile-contacts-link">
-                  <a href="mailto:info@devstudio.com">info@devstudio.com</a>
-                </li>
-              </ul>
-              <div class="mobile-social-container">
-                <ul class="mobile-social-list">
-                  <li class="mobile-social-item">
-                    <a
-                      href="https://www.instagram.com"
-                      class="mobile-social-icons"
-                      target="_blank"
-                    >
-                      <svg class="social-icons" width="16" height="16">
-                        <use href="./images/icons.svg#icon-instagram"></use>
-                      </svg>
-                    </a>
-                  </li>
-                  <li class="mobile-social-item">
-                    <a
-                      href="https://www.twitter.com"
-                      class="mobile-social-icons"
-                      target="_blank"
-                    >
-                      <svg class="social-icons" width="16" height="16">
-                        <use href="./images/icons.svg#icon-twitter"></use>
-                      </svg>
-                    </a>
-                  </li>
-                  <li class="mobile-social-item">
-                    <a
-                      href="https://www.facebook.com"
-                      class="mobile-social-icons"
-                      target="_blank"
-                    >
-                      <svg class="social-icons" width="16" height="16">
-                        <use href="./images/icons.svg#icon-facebook"></use>
-                      </svg>
-                    </a>
-                  </li>
-                  <li class="mobile-social-item">
-                    <a
-                      href="https://www.linkedin.com"
-                      class="mobile-social-icons"
-                      target="_blank"
-                    >
-                      <svg class="social-icons" width="16" height="16">
-                        <use href="./images/icons.svg#icon-linkedin"></use>
-                      </svg>
-                    </a>
-                  </li>
-                </ul>
-              </div>
-            </address>
-          </div>
-        </div>
       </div>
     </header>
     <main class="page-main">
@@ -468,10 +390,12 @@
                       ./images/banking-app-m@2x.jpg 2x
                     "
                   />
-                  <img 
-                  class="portfolio-img"
+                  <img
+                    class="portfolio-img"
                     src="./images/banking-app-m.jpg"
                     alt="banking app"
+                    width="360"
+                    height="300"
                   />
                 </picture>
               </div>
@@ -479,7 +403,7 @@
                 <h3 class="portfolio-title">Banking App</h3>
                 <p class="portfolio-text">App</p>
               </div>
-            </i>
+            </li>
             <li class="portfolio-item">
               <div class="portfolio-overlay">
                 <p class="text-overlay">
@@ -502,10 +426,12 @@
                       ./images/cashless-payment-m@2x.jpg 2x
                     "
                   />
-                  <img 
-                  class="portfolio-img"
+                  <img
+                    class="portfolio-img"
                     src="./images/cashless-payment-m.jpg "
                     alt="Cashless Payment"
+                    width="360"
+                    height="300"
                   />
                 </picture>
               </div>
@@ -536,10 +462,12 @@
                       ./images/meditation-app-m@2x.jpg 2x
                     "
                   />
-                  <img 
-                  class="portfolio-img"
+                  <img
+                    class="portfolio-img"
                     src="./images/meditation-app-m.jpg "
                     alt="Meditation App"
+                    width="360"
+                    height="300"
                   />
                 </picture>
               </div>
@@ -570,10 +498,12 @@
                       ./images/taxi-service-m@2x.jpg 2x
                     "
                   />
-                  <img 
-                  class="portfolio-img"
+                  <img
+                    class="portfolio-img"
                     src="./images/taxi-service-m.jpg "
                     alt="Taxi Service"
+                    width="360"
+                    height="300"
                   />
                 </picture>
               </div>
@@ -604,10 +534,12 @@
                       ./images/screen-illustrations-m@2x.jpg 2x
                     "
                   />
-                  <img 
-                  class="portfolio-img"
+                  <img
+                    class="portfolio-img"
                     src="./images/screen-illustrations-m.jpg"
                     alt="Screen Illustrations"
+                    width="360"
+                    height="300"
                   />
                 </picture>
               </div>
@@ -634,14 +566,16 @@
                   <source
                     media="(max-width: 767px)"
                     srcset="
-                      ./images/online-courses-m.jpg 1x,
+                      ./images/online-courses-m.jpg    1x,
                       ./images/online-courses-m@2x.jpg 2x
                     "
                   />
-                  <img 
-                  class="portfolio-img"
+                  <img
+                    class="portfolio-img"
                     src="./images/online-courses-m.jpg"
                     alt="Online Courses"
+                    width="360"
+                    height="300"
                   />
                 </picture>
               </div>
@@ -659,60 +593,60 @@
       <div class="container">
         <div class="footer-page-container">
           <div class="footer-part-tab">
-          <div class="footer-container">
-            <a class="logo footer-logo" href="./index.html"
-              >Web<span class="logo-part">Studio</span></a
-            >
-            <p class="footer-text">
-              Increase the flow of customers and sales for your business with
-              digital marketing & growth solutions.
-            </p>
-          </div>
-          <div class="social-media">
-            <p class="footer-paragrapf">Social media</p>
-            <ul class="footer-social-list">
-              <li class="footer-social-item">
-                <a
-                  class="footer-social-link"
-                  href="https://www.instagram.com"
-                  target="_blank"
-                >
-                  <svg class="footer-social-icons" width="24" height="24">
-                    <use href="./images/icons.svg#icon-instagram"></use></svg
-                ></a>
-              </li>
-              <li class="footer-social-item">
-                <a
-                  class="footer-social-link"
-                  href="https://www.twitter.com"
-                  target="_blank"
-                >
-                  <svg class="footer-social-icons" width="24" height="24">
-                    <use href="./images/icons.svg#icon-twitter"></use></svg
-                ></a>
-              </li>
-              <li class="footer-social-item">
-                <a
-                  class="footer-social-link"
-                  href="https://www.facebook.com"
-                  target="_blank"
-                >
-                  <svg class="footer-social-icons" width="24" height="24">
-                    <use href="./images/icons.svg#icon-facebook"></use></svg
-                ></a>
-              </li>
-              <li class="footer-social-item">
-                <a
-                  class="footer-social-link"
-                  href="https://www.linkedin.com"
-                  target="_blank"
-                >
-                  <svg class="footer-social-icons" width="24" height="24">
-                    <use href="./images/icons.svg#icon-linkedin"></use></svg
-                ></a>
-              </li>
-            </ul>
-          </div>
+            <div class="footer-container">
+              <a class="logo footer-logo" href="./index.html"
+                >Web<span class="logo-part">Studio</span></a
+              >
+              <p class="footer-text">
+                Increase the flow of customers and sales for your business with
+                digital marketing & growth solutions.
+              </p>
+            </div>
+            <div class="social-media">
+              <p class="footer-paragrapf">Social media</p>
+              <ul class="footer-social-list">
+                <li class="footer-social-item">
+                  <a
+                    class="footer-social-link"
+                    href="https://www.instagram.com"
+                    target="_blank"
+                  >
+                    <svg class="footer-social-icons" width="24" height="24">
+                      <use href="./images/icons.svg#icon-instagram"></use></svg
+                  ></a>
+                </li>
+                <li class="footer-social-item">
+                  <a
+                    class="footer-social-link"
+                    href="https://www.twitter.com"
+                    target="_blank"
+                  >
+                    <svg class="footer-social-icons" width="24" height="24">
+                      <use href="./images/icons.svg#icon-twitter"></use></svg
+                  ></a>
+                </li>
+                <li class="footer-social-item">
+                  <a
+                    class="footer-social-link"
+                    href="https://www.facebook.com"
+                    target="_blank"
+                  >
+                    <svg class="footer-social-icons" width="24" height="24">
+                      <use href="./images/icons.svg#icon-facebook"></use></svg
+                  ></a>
+                </li>
+                <li class="footer-social-item">
+                  <a
+                    class="footer-social-link"
+                    href="https://www.linkedin.com"
+                    target="_blank"
+                  >
+                    <svg class="footer-social-icons" width="24" height="24">
+                      <use href="./images/icons.svg#icon-linkedin"></use></svg
+                  ></a>
+                </li>
+              </ul>
+            </div>
           </div>
           <div class="footer-subscribe">
             <p class="subscribe-text">Subscribe</p>
@@ -739,7 +673,7 @@
         </div>
       </div>
     </footer>
-    <div class="backdrop is-open">
+    <div class="backdrop">
       <div class="modal">
         <button class="close-popup">
           <svg class="close-popup-icon" width="8" height="8">
@@ -818,11 +752,95 @@
                   <use href="./images/icons.svg#icon-check"></use>
                 </svg>
               </span>
-              I accept the terms and conditions of the<a class="privacy-policy" href="">&nbsp;Privacy Policy</a></label
+              I accept the terms and conditions of the<a
+                class="privacy-policy"
+                href=""
+                >&nbsp;Privacy Policy</a
+              ></label
             >
           </div>
           <button class="form-button" type="submit">Send</button>
         </form>
+      </div>
+    </div>
+    <div class="modile-menu">
+      <div class="container modile-menu-container">
+        <button class="mobile-menu-close">
+          <svg class="mobile-menu-icon" width="8" height="8">
+            <use href="./images/icons.svg#icon-close"></use>
+          </svg>
+        </button>
+        <nav class="mobile-menu-nav">
+          <ul class="mobile-nav-list">
+            <li class="mobile-nav-item">
+              <a class="mobile-nav-link current" href="./index.html">Studio</a>
+            </li>
+            <li><a class="mobile-nav-link" href="#">Portfolio</a></li>
+            <li><a class="mobile-nav-link" href="#">Contacts</a></li>
+          </ul>
+        </nav>
+        <address class="mobile-contacts">
+          <ul class="mobile-contacts-list">
+            <li class="mobile-contacts-link">
+              <a class="mobile-contacts-phone" href="tel:+110001111111"
+                >+11 (000) 111-11-11</a
+              >
+            </li>
+            <li class="mobile-contacts-link">
+              <a class="mobile-contacts-email" href="mailto:info@devstudio.com"
+                >info@devstudio.com</a
+              >
+            </li>
+          </ul>
+          <div class="mobile-social-container">
+            <ul class="mobile-social-list">
+              <li class="mobile-social-item">
+                <a
+                  href="https://www.instagram.com"
+                  class="mobile-social-icons"
+                  target="_blank"
+                >
+                  <svg class="social-icons" width="24" height="24">
+                    <use href="./images/icons.svg#icon-instagram"></use>
+                  </svg>
+                </a>
+              </li>
+              <li class="mobile-social-item">
+                <a
+                  href="https://www.twitter.com"
+                  class="mobile-social-icons"
+                  target="_blank"
+                >
+                  <svg class="social-icons" width="24" height="24">
+                    <use href="./images/icons.svg#icon-twitter"></use>
+                  </svg>
+                </a>
+              </li>
+              <li class="mobile-social-item">
+                <a
+                  href="https://www.facebook.com"
+                  class="mobile-social-icons"
+                  target="_blank"
+                >
+                  <svg class="social-icons" width="24" height="24">
+                    <use href="./images/icons.svg#icon-facebook"></use>
+                  </svg>
+                </a>
+              </li>
+              <li class="mobile-social-item">
+                <a
+                  href="https://www.linkedin.com"
+                  class="mobile-social-icons"
+                  target="_blank"
+                >
+                  <svg class="social-icons" width="24" height="24">
+                    <use href="./images/icons.svg#icon-linkedin"></use>
+                  </svg>
+                </a>
+              </li>
+            </ul>
+          </div>
+        </address>
       </div>
     </div>
   </body>
