--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
               <img
                 src="./images/markguerrero.jpg"
                 alt="Mark Guerrero"
-                srcset="./images/mark-guerrero@2x.jpg"
+                srcset="./images/mark-guerrero@2x.jpg 2x"
                 width="264"
                 height="260"
               />
@@ -188,7 +188,7 @@
               <img
                 src="./images/tomford.jpg"
                 alt="Tom Ford"
-                srcset="./images/tom-ford@2x.jpg"
+                srcset="./images/tom-ford@2x.jpg 2x"
                 width="264"
                 height="260"
               />
@@ -247,7 +247,7 @@
               <img
                 src="./images/camilagarcia.jpg"
                 alt="Camila Garcia"
-                srcset="./images/camila-garcia@2x.jpg"
+                srcset="./images/camila-garcia@2x.jpg 2x"
                 width="264"
                 height="260"
               />
@@ -306,7 +306,7 @@
               <img
                 src="./images/danielwilson.jpg"
                 alt="Daniel Wilson"
-                srcset="./images/daniel-wilson@2x.jpg"
+                srcset="./images/daniel-wilson@2x.jpg 2x"
                 width="264"
                 height="260"
               />
@@ -393,6 +393,10 @@
                   <img
                     class="portfolio-img"
                     src="./images/banking-app-m.jpg"
+                    srcset="
+                      ./images/banking-app-m.jpg    1x,
+                      ./images/banking-app-m@2x.jpg 2x
+                    "
                     alt="banking app"
                     width="360"
                     height="300"
@@ -429,6 +433,10 @@
                   <img
                     class="portfolio-img"
                     src="./images/cashless-payment-m.jpg "
+                    srcset="
+                      ./images/cashless-payment-m.jpg    1x,
+                      ./images/cashless-payment-m@2x.jpg 2x
+                    "
                     alt="Cashless Payment"
                     width="360"
                     height="300"
@@ -465,6 +473,10 @@
                   <img
                     class="portfolio-img"
                     src="./images/meditation-app-m.jpg "
+                    srcset="
+                      ./images/meditation-app-m.jpg    1x,
+                      ./images/meditation-app-m@2x.jpg 2x
+                    "
                     alt="Meditation App"
                     width="360"
                     height="300"
@@ -501,6 +513,10 @@
                   <img
                     class="portfolio-img"
                     src="./images/taxi-service-m.jpg "
+                    srcset="
+                      ./images/taxi-service-m.jpg    1x,
+                      ./images/taxi-service-m@2x.jpg 2x
+                    "
                     alt="Taxi Service"
                     width="360"
                     height="300"
@@ -537,6 +553,10 @@
                   <img
                     class="portfolio-img"
                     src="./images/screen-illustrations-m.jpg"
+                    srcset="
+                      ./images/screen-illustrations-m.jpg    1x,
+                      ./images/screen-illustrations-m@2x.jpg 2x
+                    "
                     alt="Screen Illustrations"
                     width="360"
                     height="300"
@@ -573,6 +593,10 @@
                   <img
                     class="portfolio-img"
                     src="./images/online-courses-m.jpg"
+                    srcset="
+                      ./images/online-courses-m.jpg    1x,
+                      ./images/online-courses-m@2x.jpg 2x
+                    "
                     alt="Online Courses"
                     width="360"
                     height="300"
