--- a/index.html
+++ b/index.html
@@ -774,12 +774,14 @@
                   <use href="./images/icons.svg#icon-check"></use>
                 </svg>
               </span>
-              I accept the terms and conditions of the<a
-                class="privacy-policy"
-                href=""
-                >&nbsp;Privacy Policy</a
-              ></label
-            >
+              <span>
+                I accept the terms and conditions of the<a
+                  class="privacy-policy"
+                  href=""
+                  >&nbsp;Privacy Policy</a
+                >
+              </span>
+            </label>
           </div>
           <button class="form-button" type="submit">Send</button>
         </form>
